# rust-api-starter

./: Cargo.toml
src/: handlers.rs  main.rs
