[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-rt = "2.7.0"
actix-service = "2.0.2"
actix-web = "4.1.0"
actix-web-httpauth = "0.8.0"
alcoholic_jwt = "4091.0.0"
chrono = { version = "0.4.22", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
futures = "0.3.23"
hex-coordinates = "0.1.2"
r2d2 = "0.8.10"
reqwest = "0.11.11"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"




